# SI-SR-1

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-kaggle.txt
configs/: default.yaml  medium.yaml  small.yaml  smoke.yaml  stage_diffusion.yaml  stage_edit.yaml  stage_joint.yaml  stage_vae.yaml
kaggle/: GeoDiff_GAN_Kaggle.ipynb  README.md
learning/: 00_course_map.md  01_mathematical_foundations.md  02_deep_learning_and_pytorch.md  03_remote_sensing_and_sentinel2.md  04_image_formation_and_super_resolution.md  05_gan_foundations.md  06_diffusion_foundations.md  07_conditioning_and_prompts.md  08_geodiff_gan_architecture.md  09_data_and_degradation_pipeline.md  10_five_stage_training.md  11_spatial_fidelity_and_evaluation.md  12_debugging_and_visual_diagnostics.md  13_novelty_ablations_and_research.md  14_kaggle_and_research_workflow.md  15_paper_thesis_and_viva.md  16_parameter_counts_and_training_configuration.md  README.md
paper/: INFOGRAPHICS.md  README.md  build_architecture_infographic.py  build_dual_policy_infographic.py  generate_figures.py  main.tex  references.bib
scripts/: check_parameters.py
src/geodiff_gan/: __init__.py  config.py  diagnostics.py  io.py  losses.py  metrics.py  parameters.py  text.py
src/geodiff_gan/cli/: baselines.py  caption_qwen.py  debug.py  evaluate.py  infer.py  parameters.py  prepare_sentinel.py  train.py
src/geodiff_gan/data/: __init__.py  dataset.py  manifest.py  sentinel.py
tests/: test_core.py  test_evaluation_cli.py  test_incremental_preparation.py  test_parameters.py  test_training.py
(+12 files in other folders)
